--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url: ${JDBC_DATABASE_URL:}
+spring.datasource.url: jdbc:${JDBC_DATABASE_URL:}
+spring.datasource.username=${DATABASE_USERNAME:}
+spring.datasource.password=${DATABASE_PASSWORD:}
+
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.maximum-pool-size=10
 
