--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,10 @@ spring.datasource.hikari.maximum-pool-size=10
 
 spring.thymeleaf.mode=HTML
 
-logging.level.org.springframework=INFO
+logging.level.org.springframework=DEBUG
+
+spring.batch.job.enabled=true
+spring.jpa.hibernate.ddl-auto=update
 
 spring.profiles.active=production
 
